# SpectralSensorProfiles

./: CMakeLists.txt  binary_spectra.cpp  camera_xy_lookup.cpp  camera_xy_lookup.h  cfa_plots.gp  cie1931.h  cie1931_c.h  color_correction.h  correctImages.sh  image_chromatic.cpp  image_plot.gp  k_means.cpp  k_means.h  lookup_2d.cpp  lookup_2d.h  plot_cfa.gp  ppm_image.cpp  ppm_image.h  rbf.cpp  rbf.h  ref_error.gp  rgb2spec.cpp  rgb2spec.h  rgb2spec_test.cpp  runForAllCameras.sh  sampler.cpp  sampler.h  sensor_correction.cpp  sensor_images.cpp  sensor_spectra.cpp  show_plots.gp  spectral_image.cpp  spectral_image.h  spectrum.cpp  spectrum.h  xy_conversion.cpp  xy_conversion.h
cameras/: .gitignore
libs/: nanoflann.hpp
util/: cie1931_dump.py  convertSpectralImage.txt  rbf.py  sigmoid.py
